# aitldr-cli

./: README.md  pyproject.toml
aitldr/: __init__.py  __main__.py  ai.py  cache.py  cli.py  config.py  core.py  pages.py
aitldr-core/: Cargo.toml
aitldr-core/aitldr-ai/: Cargo.toml
aitldr-core/aitldr-ai/src/: config.rs  lib.rs
aitldr-core/aitldr-cache/: Cargo.toml
aitldr-core/aitldr-cache/src/: lib.rs
aitldr-core/aitldr-risk/: Cargo.toml
aitldr-core/aitldr-risk/src/: lib.rs
aitldr-core/aitldr-submit/: Cargo.toml
