[project]
name = "aitldr"
version = "0.1.0"
description = "AI-native TLDR CLI with AI fallback for missing pages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
aitldr = "aitldr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
